fixed 2 issue metrics on experimental tab not showing/linecharts more lenient when accepting data, default stddev and detail, adjusted detail width and below-chart padding

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -132,7 +132,7 @@ section.status
   z-index: 2
   width: 100%;
   margin: -10px 0px 30px 0px;
-  padding: 0px 10px 0px 25px
+  padding: 0px 30px 0px 25px
 
 .section {
   overflow:hidden;
